tests/ui/issues/issue-27008.stderr
error: the constant `S` is not of type `usize`
  --> $DIR/issue-27008.rs:4:13
   |
LL |     let b = [0; S];
   |             ^^^^^^ expected `usize`, found `S`

error: aborting due to 1 previous error

